 /* $Id: changelog,v 1.740 2000-02-21 16:11:44 bird Exp $ */

 2000-02-21: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
        - WIN32K: *Initial support for UNIX-styled scripts
                   (files starting with an #!<interpreter> [args...])
                   This is a _very_ big hack! But never the less it's working.
                   (or at least it seems like working...)
                  *The kernel symbol importer is enhanced to support more
                   generic function prologs and to import variables and
                   16-bit functions.
                  *Segments are now locked in physical memory.
                  (Note, last changes have not been tested on Aurora yet,
                   but it will hopefully work just fine.)

 2000-02-21: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: SetDIBits bugfix (for dib sections)
	- USER32: Ported all Wine accelerator apis (fixes keys in calc)

 2000-02-21: Jens Wiessner <wiessnej@rfi.de>
	- RASAPI32: Added stubs
	- OLEPRO32: Ported Corel Wine stub dll
	- CRTDLL: Replaced some stubs

 2000-02-18: Sander van Leeuwen <sandervl@xs4all.nl>
	- OPENGL\GLIDE: Added Odin version of Glide based on the OS/2 port
                        written by Craig Ballantyne. (Voodoo 1)
                        NOTE: Includes 3dfx Glide license

 2000-02-17: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Fixed memory map view bug (main map deleted when there
                    were still views left) -> fixes crash when playing Realplayer
                    video (.rm) files
	- WINMM: Added new logging feature + fixed waveout query format bug

 2000-02-16: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMCTL32: treeview: switched to unicode, fixed many bugs

 2000-02-16: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32/USER32/GDI32: Added new logging feature which allows users
                                 to disable or enable logging for separate source